Remove extra padding from EE Detail Images (No Issue) (#1317)
* Remove extra padding from EE Detail Images

No Issue

* More specific css selector

--- a/src/containers/execution-environment-detail/execution-environment-detail_images.scss
+++ b/src/containers/execution-environment-detail/execution-environment-detail_images.scss
@@ -1,3 +1,9 @@
 .tags-column {
   max-width: 250px;
 }
+
+.detail-images-toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
